Fri Apr 11 21:58:15 UTC 2008  Ciju John  <johnc at ociweb dot com>

        * DDS_release_notes.txt:
          Add entry for command-line option "-TransportDebugLevel".

Fri Apr 11 21:45:54 UTC 2008  Ciju John  <johnc at ociweb dot com>

        * dds/DCPS/Service_Participant.cpp:
          New command-line option "-TransportDebugLevel" for specifying
          Transport debug level.

        * dds/DCPS/transport/framework/EntryExit.h:
          Add 6th log level exclusively for trace messages.

        * dds/DCPS/transport/framework/TransportDebug.h:
          Simplified Transport Debug logging and changed default log build
          level to 5.

        * dds/DCPS/DataReaderImpl.cpp:
        * dds/DCPS/DataWriterImpl.cpp:
        * dds/DCPS/SubscriberImpl.cpp:
        * dds/DCPS/WriteDataContainer.cpp:
        * dds/DCPS/transport/ReliableMulticast/ReliableMulticastTransportImplFactory.inl:
        * dds/DCPS/transport/ReliableMulticast/ReliableMulticastTransportImplFactory.cpp:
        * dds/DCPS/transport/framework/BuildChainVisitor.inl:
        * dds/DCPS/transport/framework/BuildChainVisitor.cpp:
        * dds/DCPS/transport/framework/DataLink.inl:
        * dds/DCPS/transport/framework/DataLink.cpp:
        * dds/DCPS/transport/framework/DataLinkCleanupTask.cpp:
        * dds/DCPS/transport/framework/DataLinkSet.inl:
        * dds/DCPS/transport/framework/DataLinkSet.cpp:
        * dds/DCPS/transport/framework/DataLinkSetMap.cpp:
        * dds/DCPS/transport/framework/NetworkAddress.inl:
        * dds/DCPS/transport/framework/NullSynch.inl:
        * dds/DCPS/transport/framework/NullSynch.cpp:
        * dds/DCPS/transport/framework/NullSynchStrategy.cpp:
        * dds/DCPS/transport/framework/PacketRemoveVisitor.inl:
        * dds/DCPS/transport/framework/PacketRemoveVisitor.cpp:
        * dds/DCPS/transport/framework/PerConnectionSynch.inl:
        * dds/DCPS/transport/framework/PerConnectionSynch.cpp: