@@ -29,7 +29,7 @@ PubDriver::~PubDriver()
 void
 PubDriver::run(int& argc, char* argv[])
 {
-  DBG_SUB_ENTRY("PubDriver","run",1);
+  DBG_ENTRY_LVL("PubDriver","run",6);
 
   // Need call the ORB_init to dynamically load the SimpleMcast library via
   // service configurator.
@@ -184,7 +184,7 @@ PubDriver::init()
 void
 PubDriver::run()
 {
-  DBG_SUB_ENTRY("PubDriver","run",2);
+  DBG_ENTRY_LVL("PubDriver","run",6);
 
   VDBG((LM_DEBUG, "(%P|%t) DBG:   "
              "Create the 'subscriptions' (array of AssociationData).\n"));
